assets/css/style.css
/* ... */
.faq-btn-link {
    font-weight: 500;
    color: rgb(29, 83, 25);
    text-decoration: none;
    font-size: 1.15rem;
    text-align: left;

}

.btn:hover {
    color: rgb(129, 77, 28);
    text-decoration: none;
}

.faqcard-header {
    padding: .3rem 1.25rem;
    margin-bottom: 0;
    background-color: rgb(129, 77, 28, .05);
    border-bottom: 1px solid rgb(129, 77, 28, .2);
}

.faqcard-header:first-child {
    border-radius: calc(.25rem - 1px) calc(.25rem - 1px) 0 0;
}

.faqcard-body {
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    min-height: 1px;
    padding: 1.25rem;
    font-size: 1.1rem;
}

#accordion {
    margin-bottom: 30px;

}

#faqhpnocollapse {
    z-index:-3;
}

/*---------------------------------------FAQ-Services*/
.services-sm {
    font-family: 'Tangerine', cursive;
    background-color: transparent;
    color: rgb(255, 242, 210);
    font-weight: 300;
    text-shadow: 2px 2px 5px black; 
    margin-bottom: 0px;
}

.services-md {
    font-family: 'Tangerine', cursive;
    background-color: transparent;
    color: rgb(255, 242, 210);
    font-weight: 300;
    text-shadow: 2px 2px 5px black; 
    margin-bottom: 0px;

}

.faqh2ser-sm {
    font-size: 100px;
    margin-top: 120px;
}

.faqh2ser-md {
    font-size: 120px;
    margin-top: 120px;
    text-align: left;
}


/*---------------------------------------Footer*/
.footer-quote {
    vertical-align: middle;
    margin-top: 40px;
    margin-bottom: 40px;
    text-align: center;
    font-family: 'Tangerine', cursive;
    font-size: 50px;
    padding: 0;
    line-height: 22px;
}

.footer-section-hr {
    text-align: center;
    width: 50%;
    height: 0.5px;
    background-color: #f1d578b0;
    margin-bottom: 30px;
    padding-top: 0px;
    border-top: 0px;
}

.footer-h5 {
    font-family: 'Tangerine', cursive;
    font-size: 30px;
    padding-left: 10px;
    letter-spacing: 2px;
    font-weight: 700;
    padding-bottom: 0px;
    margin-bottom: 0px;
}

.footer-detail-hr{
    width: 75%;
    background-color: #f1d578b0;
    margin-bottom: 10px;
    margin-left: 10px;
    margin-top: 0px;
    padding-top: 0px;
    padding-left: 10px;
}

.footer-links {
    text-decoration: none;
}

.footer-detail-last{
    margin-bottom: 20px;
}

.services-links{
    text-decoration: none;
    list-style-type: none;
    padding-left: 10px;
    font-size: 14px;
    padding-bottom: 5px;
}

.services-links i{
    padding-right: 7px;
    color: #f1d578de;
    font-size: 15px;
}

.services-links a:hover {
    color: rgb(255, 242, 210);
    text-decoration: none;
}

#fa-award {
    padding-right: 11px;
}

.social-links {
    margin-left: 10px;
    padding-bottom: 15px;
}

.social-links li a i {
    margin-right: 5px;
    margin-top: 7px;
    width: 28px;
    height: 28px;
    padding-left: 7px;
    padding-right: 9px;
    padding-bottom: 8px;
    padding-top: 10px;
    border-radius: 50%;
    font-size: 17px;
    line-height: 7px;
    text-align: center; 
    color: rgb(24, 48, 22);
    background: #f1d57888;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

#fa-youtube {
    padding-left: 4px;
    padding-right: 13px;
    padding-bottom: 8px;
    padding-top: 10px;
}
.social-links li a i:hover {
    background: rgb(243, 223, 172);
}


footer, footer a {
    color: #f1d578;
}

.bg-color-footer {
    background-color: rgb(24, 48, 22);
}

.journey-items {
    font-size: 14px;
    vertical-align: middle;
    padding-top: 6px;
    padding-bottom: 6px;
    padding-left: 15px;
    position: relative;
    border-left: 1px solid;
    display: inline-block;
    margin-top: 0px;
    margin-bottom: 0px;
    margin-left: 17px;
}

.journey-circle {
    z-index: 3;
    margin-top: 12px;
    margin-left: 17px;
    left: 11px;
    padding-top: 9px;
    width: 9px;
    height: 10px;
    display: inline-block;
    position: absolute;
    border-radius: 9px;
    background: #f1d578;
}

.journey-items:hover {
    color: rgb(255, 242, 210);
    text-decoration: none;
    border-left: 1px solid #f1d578;
}

.journey-circle-active {
    z-index: 4;
    margin-top: 11px;
    margin-left: 17px;
    left: 10px;
    padding-top: 10px;
    width: 11px;
    height: 11px;
    display: inline-block;
    position: absolute;
    border-radius: 11px;
    background: green;
}

